--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "customize-cra": "^1.0.0",
     "express": "^4.19.2",
     "http-proxy-middleware": "^2.0.6",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
